@@ -3,6 +3,8 @@
 -Fixed a minor bug with crowd event placement checking
 -Fixed the tab order in the configuration window
 -Fixed a null reference exception in the chord slide handshape length fix
+-Fixed an off-by-one error in the FIXOPEN chord processor
+-Fixed a false positive in the bend value mismatch check
 -Bring the main window to the front when closing a child window (WPF version)
 -Updated Avalonia to 0.9.9
 -Updated .NET Core version to 3.1 (WPF version)
